--- a/public/index.html
+++ b/public/index.html
@@ -5,6 +5,7 @@
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
+    <meta name="google-signin-client_id" content="827687196450-lkfbo39squghuga7be3aoatd1nq7961u.apps.googleusercontent.com" />
     <meta
       name="description"
       content="Web site created using create-react-app"
@@ -24,13 +25,15 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>React App</title>
+    <title>Sappenin'</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
     <!--<link type="text/css" rel="stylesheet" href="css/materialize.min.css"  media="screen,projection"/>
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>-->
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
+    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAvc6DcmTbwiOb15dkYeS_iFDn4h-4ELZE&libraries=places"></script>
+    <script src="https://apis.google.com/js/platform.js" async defer></script>
     <div id="root"></div>
     <!--
       This HTML file is a template.
