--- a/public/index.html
+++ b/public/index.html
@@ -26,12 +26,15 @@
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
     <title>Sappenin'</title>
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
     <!--<link type="text/css" rel="stylesheet" href="css/materialize.min.css"  media="screen,projection"/>
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>-->
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
+    <script src="https://unpkg.com/react/umd/react.production.min.js" crossorigin></script>
+    <script src="https://unpkg.com/react-dom/umd/react-dom.production.min.js" crossorigin></script>
+    <script src="https://unpkg.com/react-bootstrap@next/dist/react-bootstrap.min.js" crossorigin></script>
+    <script>var Alert = ReactBootstrap.Alert;</script>
     <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAvc6DcmTbwiOb15dkYeS_iFDn4h-4ELZE&libraries=places"></script>
     <script src="https://apis.google.com/js/platform.js" async defer></script>
     <div id="root"></div>
